--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 </head>
 
 <body>
-  <header></header>
+  <header>
+    <h1 class="text-center text-primary" >E-commerce Shopping Carts</h1>
+  </header>
   <main class="main">
     <div class="search-field">
       <div class="search-box">
@@ -32,7 +34,6 @@
     <div class="row">
       <div class="col-md-9 col-lg-9 col-sm-7">
         <div id="all-products" class="">
-          <h1></h1>
         </div>
       </div>
       <div class="col-md-3 col-lg-3 col-sm-5 cart-main">
