--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 
 <body>
   <header>
-    <h1 class="text-center text-primary" >E-commerce Shopping Carts</h1>
+    <h1 class="heading" >E-commerce Shopping Carts</h1>
   </header>
   <main class="main">
     <div class="search-field">
       <div class="search-box">
         <input id="input-field" class="search-field" type="text" />
-        <button type="button" class="btn btn-primary search-button" data-toggle="button" aria-pressed="false"
-          autocomplete="off" id="search-btn" onclick="loadProducts()">
+        <button type="button" class="btn btn-primary rounded-0 search-button"  
+           id="search-btn" onclick="loadProducts()">
           Search
         </button>
       </div>
