--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   <title>Tori Store</title>
   <link rel="stylesheet" href="./css/style.css" />
   <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" /> -->
 
   <!-- google Montserrat  font  -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -19,19 +20,15 @@
 
 <body>
   <header>
-    <h1 class="heading" >E-commerce Shopping Carts</h1>
+    <h1 class="text-center text-primary " >E-commerce Shopping Carts</h1>
   </header>
+
   <main class="main">
-    <div class="search-field">
-      <div class="search-box">
-        <input id="input-field" class="search-field" type="text" />
-        <button type="button" class="btn btn-primary rounded-0 search-button"  
-           id="search-btn" onclick="loadProducts()">
-          Search
-        </button>
-      </div>
+    <div class="input-group mb-3 w-50 mx-auto my-5">
+      <input  id="input-field" type="text" class="form-control">
+      <button id="search-btn" onclick="loadProducts()" class="btn btn-primary" type="button" >Button</button>
     </div>
-    <div class="row">
+    <div class="row my-5">
       <div class="col-md-9 col-lg-9 col-sm-7">
         <div id="all-products" class="">
         </div>
