--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Tori Store</title>
   <link rel="stylesheet" href="./css/style.css" />
-  <!-- Latest compiled and minified CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+  <!--------------------------
+     bootstrap css link 
+  --------------------------->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+  <!---------------------
+   Latest compiled and minified CSS
+  ----------------- -->
   <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
     integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" /> -->
 
@@ -19,20 +25,30 @@
 </head>
 
 <body>
+  <!-- start heading -->
   <header>
-    <h1 class="text-center text-primary " >E-commerce Shopping Carts</h1>
+    <h1 class="text-center text-primary ">E-commerce Shopping Store</h1>
   </header>
 
   <main class="main">
+    <!----------------------------
+      search field 
+    ----------------------------->
     <div class="input-group mb-3 w-50 mx-auto my-5">
-      <input  id="input-field" type="text" class="form-control">
-      <button id="search-btn" onclick="loadProducts()" class="btn btn-primary" type="button" >Button</button>
+      <input id="input-field" type="text" class="form-control">
+      <button id="search-btn" onclick="loadProducts()" class="btn btn-primary" type="button">Search</button>
     </div>
-    <div class="row my-5">
+    <!----------------------------
+       display products 
+    ----------------------------->
+    <div class=" container-fluid row my-5">
       <div class="col-md-9 col-lg-9 col-sm-7">
         <div id="all-products" class="">
         </div>
       </div>
+      <!------------------------------
+         display my cart
+         --------------------- -->
       <div class="col-md-3 col-lg-3 col-sm-5 cart-main">
         <div class="cart" id="my-cart">
           <table class="table">
@@ -85,7 +101,6 @@
     </div>
   </main>
   <footer></footer>
-
   <!-- add javascript  file  -->
   <script src="./js/app.js"></script>
 </body>
