--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
   --------------------------->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-  <!---------------------
-   Latest compiled and minified CSS
-  ----------------- -->
-  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" /> -->
-
-  <!-- google Montserrat  font  -->
+  <!------------------------
+    font awsome cdn link
+    --------------------- -->
+  <script src="https://kit.fontawesome.com/20b6b67421.js" crossorigin="anonymous"></script>
+  <!---------------------------
+   google Montserrat font  
+  -------- ------------------->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet" />
