added header color

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
   <!-- start heading -->
   <header>
-    <h1 class="text-center text-primary ">E-commerce Shopping Store</h1>
+    <h1 class="text-center text-secondary">E-commerce Shopping Store</h1>
   </header>
 
   <main class="main">
