--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
       <input id="input-field" type="text" class="form-control">
       <button id="search-btn" onclick="loadProducts()" class="btn btn-primary" type="button">Search</button>
     </div>
+    <!---------------------------
+       show details 
+      -------------------------->
+    <div id="show-details" class="card w-25 mx-auto p-5 my-5"  style="display:none"></div>
     <!----------------------------
        display products 
     ----------------------------->
