added categories product

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       search field 
     ----------------------------->
     <div class="input-group mb-3 w-50 mx-auto my-5">
-      <input id="input-field" type="text" class="form-control">
+      <input id="input-field" type="text" class="form-control" placeholder= 'Search by Category name.....'>
       <button id="search-btn" onclick="loadProducts()" class="btn btn-primary" type="button">Search</button>
     </div>
     <!---------------------------
